@@ -425,6 +425,8 @@ Tests
 Build
 -----
 
+- Issue #8847: Disable COMDAT folding in Windows PGO builds.
+
 - Issue #14197: For OS X framework builds, ensure links to the shared
   library are created with the proper ABI suffix.
 
